--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,14 @@
     animation-fill-mode:both;
 }
 
-#themecolors .selector {
+#themecolors .selector, .cursor {
     cursor: pointer;
+}
+
+
+#my-signin2{
+    align-items: center;
+    display: flex;
+    text-align: center;
+    justify-content: center;
 }
