--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -7,13 +7,14 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav">
                         <li class="user-profile">
-                            <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img src="./assets/images/users/profile.png" alt="user" />
+                            <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img [src]="usuario.imagenUrl" alt="user" />
                                 <span class="hide-menu">
-                                    Steave Jobs
+                                    {{ usuario.nombre | slice:0:16 }}
+                                    {{ usuario.nombre.length > 16 ? '...' : '' }}
                                 </span>
                             </a>
                             <ul aria-expanded="false" class="collapse">
-                                <li><a href="javascript:void()">My Profile </a></li>
+                                <li><a routerLinkActive="active" routerLink="perfil">Mi perfil </a></li>
                                 <li><a href="javascript:void()">My Balance</a></li>
                                 <li><a href="javascript:void()">Inbox</a></li>
                                 <li><a routerLink="/dashboard/account-settings">Account Setting</a></li>
