--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,9 @@
     text-align: center;
     justify-content: center;
 }
+
+.img-avatar{
+    width: 200px;
+    height: 200px;
+    border-radius: 3px;
+}
