--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,18 @@
     border-radius: 100%;
     object-fit: cover;
 }
+
+
+.fondo-modal-imagen{
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+}
+
+.oculto{
+    display: none;
+}
