--- a/src/app/pages/mantenimientos/hospitales/hospitales.component.html
+++ b/src/app/pages/mantenimientos/hospitales/hospitales.component.html
@@ -6,7 +6,9 @@
                 <input 
                         type="text" name="" id=""
                         class="form-control"
-                        placeholder="Buscar usuario">
+                        placeholder="Buscar usuario"
+                        (keyup)="buscar( input.value )"
+                        #input>
 
             </div>
         </div>
@@ -32,13 +34,21 @@
     <div class="col-12" *ngIf="!cargando">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Hospitales {{ hospitales.length }}</h4>
+
+                <div class="text-right">
+                    <button class="btn btn-primary" (click)="abrirSA()">
+                        <i class="fa fa-hospital-o"></i>
+                        Crear hospital
+                    </button>
+                </div>
+
+                <h4 class="card-title">Hospitales ({{ hospitales.length }})</h4>
                 <h6 class="card-subtitle">Hospitales regitrados en el sistema:</h6>
                 <div class="table-responsive">
                     <table class="table table-bordered">
                         <thead>
-                            <tr>
-                                <th>Foto</th>
+                            <tr >
+                                <th class="w100">Foto</th>
                                 <th>Nombre</th>
                                 
                                 <th class="text-nowrap">Acciones</th>
@@ -47,7 +57,13 @@
                         <tbody>
                             <tr *ngFor="let hospital of hospitales">
                                 
-                                <td>{{ hospital.img }}</td>
+                                <td class="text-center"><img 
+                                        src="{{ hospital.img | imagenUrl:'hospitales' }}" 
+                                        [alt]="hospital.nombre"
+                                        class="avatar cursor"
+                                        (click)="abrirModal( hospital )">
+                                </td>
+                                
                                 <td>
                                     <input type="text" 
                                             class="form-control"
@@ -56,9 +72,16 @@
                                 </td>
 
                                 
-                                <td class="text-nowrap text-center">
-                                    <a href="#" data-toggle="tooltip" data-original-title="Guardar cambios"> <i class="fa fa-pencil text-inverse m-r-10"></i> </a>
-                                    <a href="#" data-toggle="tooltip" data-original-title="Borrar"> <i class="fa fa-close text-danger"></i> </a>
+                                <td class="text-nowrap text-center w100">
+                                    <a 
+                                        (click)="guardarCambios( $event, hospital )"
+                                        class="cursor"
+                                        href="#" 
+                                        data-toggle="tooltip" data-original-title="Guardar cambios"> <i class="fa fa-pencil text-inverse m-r-10"></i> </a>
+                                    <a 
+                                        (click)="eliminarHospital( $event, hospital )"
+                                        href="#" 
+                                        data-toggle="tooltip" data-original-title="Borrar"> <i class="fa fa-close text-danger"></i> </a>
                                 </td>
                             </tr>
                           
