--- a/src/app/pages/mantenimientos/usuarios/usuarios.component.html
+++ b/src/app/pages/mantenimientos/usuarios/usuarios.component.html
@@ -54,7 +54,7 @@
                             <tr *ngFor="let usuario of usuarios">
                                 <td class="text-center">
                                     <img 
-                                        src="{{ usuario.img | imagenUrl }}"
+                                        src="{{ usuario.img | imagenUrl:'usuarios' }}"
                                         class="avatar cursor"
                                         (click)="abrirModal( usuario )">
                                 </td>
